parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> DECLARE Execute INSTRUCCION
Rule 2     PROGRAM -> Execute INSTRUCCION
Rule 3     SUBPROGRAM -> DECLARE Execute INSTRUCCION
Rule 4     DECLARE -> Declare LISTADECLARA
Rule 5     LISTADECLARA -> LISTADECLARA PuntoYComa IDENT Type TIPO
Rule 6     LISTADECLARA -> IDENT Type TIPO
Rule 7     IDENT -> IDENT Coma Ident
Rule 8     IDENT -> Ident
Rule 9     TIPO -> Integer
Rule 10    TIPO -> Boolean
Rule 11    TIPO -> Tape
Rule 12    INSTRUCCION -> INSTRUCCION PuntoYComa INSTRUCCION
Rule 13    INSTRUCCION -> INSTRUCCION Done
Rule 14    INSTRUCCION -> SUBPROGRAM
Rule 15    INSTRUCCION -> ASIGNACION
Rule 16    INSTRUCCION -> INSTAPE
Rule 17    INSTRUCCION -> CONDICIONAL
Rule 18    INSTRUCCION -> ITERACIONINDET
Rule 19    INSTRUCCION -> ITERACIONDET
Rule 20    INSTRUCCION -> ENTRADA
Rule 21    INSTRUCCION -> SALIDA
Rule 22    ASIGNACION -> Ident Asignacion EXP
Rule 23    CONDICIONAL -> If EXP Then INSTRUCCION Else INSTRUCCION
Rule 24    CONDICIONAL -> If EXP Then INSTRUCCION
Rule 25    EXP -> ParAbre EXP ParCierra
Rule 26    EXP -> EXPBINBOOL
Rule 27    EXP -> EXPBINARIT
Rule 28    EXP -> EXPUNABOOL
Rule 29    EXP -> EXPUNAARIT
Rule 30    EXP -> EXPTAPE
Rule 31    EXP -> INSTAPE
Rule 32    EXP -> BOOLEAN
Rule 33    EXP -> TERMINO
Rule 34    TERMINO -> Num
Rule 35    TERMINO -> Ident
Rule 36    EXPBINBOOL -> EXP Conjuncion EXP
Rule 37    EXPBINBOOL -> EXP Disyuncion EXP
Rule 38    EXPBINBOOL -> EXP Mayor EXP
Rule 39    EXPBINBOOL -> EXP MayorIgual EXP
Rule 40    EXPBINBOOL -> EXP Menor EXP
Rule 41    EXPBINBOOL -> EXP MenorIgual EXP
Rule 42    EXPBINBOOL -> EXP Igual EXP
Rule 43    EXPBINBOOL -> EXP Desigual EXP
Rule 44    EXPBINARIT -> EXP Mas EXP
Rule 45    EXPBINARIT -> EXP Menos EXP
Rule 46    EXPBINARIT -> EXP Mult EXP
Rule 47    EXPBINARIT -> EXP Div EXP
Rule 48    EXPBINARIT -> EXP Mod EXP
Rule 49    EXPUNABOOL -> Negacion EXP
Rule 50    EXPUNAARIT -> Menos EXP
Rule 51    INSTAPE -> BINSTRUCCIONES At EXP
Rule 52    INSTAPE -> Inspeccion EXP
Rule 53    INSTAPE -> EXP Concat EXP
Rule 54    BINSTRUCCIONES -> LlaveAbre OPBINSTRUCCIONES LlaveCierra
Rule 55    OPBINSTRUCCIONES -> OPBINSTRUCCIONES Mas
Rule 56    OPBINSTRUCCIONES -> OPBINSTRUCCIONES Menos
Rule 57    OPBINSTRUCCIONES -> OPBINSTRUCCIONES Mayor
Rule 58    OPBINSTRUCCIONES -> OPBINSTRUCCIONES Menor
Rule 59    OPBINSTRUCCIONES -> OPBINSTRUCCIONES Punto
Rule 60    OPBINSTRUCCIONES -> OPBINSTRUCCIONES Coma
Rule 61    OPBINSTRUCCIONES -> <empty>
Rule 62    EXPTAPE -> CorcheteAbre Num CorcheteCierra
Rule 63    EXPTAPE -> CorcheteAbre Ident CorcheteCierra
Rule 64    EXPTAPE -> CorcheteAbre EXPBINARIT CorcheteCierra
Rule 65    BOOLEAN -> True
Rule 66    BOOLEAN -> False
Rule 67    ITERACIONINDET -> While EXP Do INSTRUCCION
Rule 68    ITERACIONDET -> For IDENT From EXP To EXP Do INSTRUCCION
Rule 69    ITERACIONDET -> For EXP To EXP Do INSTRUCCION
Rule 70    ENTRADA -> Read IDENT
Rule 71    SALIDA -> Write EXP

Terminals, with rules where they appear

Asignacion           : 22
At                   : 51
Boolean              : 10
Coma                 : 7 60
Concat               : 53
Conjuncion           : 36
CorcheteAbre         : 62 63 64
CorcheteCierra       : 62 63 64
Declare              : 4
Desigual             : 43
Disyuncion           : 37
Div                  : 47
Do                   : 67 68 69
Done                 : 13
Else                 : 23
Execute              : 1 2 3
False                : 66
For                  : 68 69
From                 : 68
Ident                : 7 8 22 35 63
If                   : 23 24
Igual                : 42
Inspeccion           : 52
Integer              : 9
LlaveAbre            : 54
LlaveCierra          : 54
Mas                  : 44 55
Mayor                : 38 57
MayorIgual           : 39
Menor                : 40 58
MenorIgual           : 41
Menos                : 45 50 56
Mod                  : 48
Mult                 : 46
Negacion             : 49
Num                  : 34 62
ParAbre              : 25
ParCierra            : 25
Punto                : 59
PuntoYComa           : 5 12
Read                 : 70
Tape                 : 11
Then                 : 23 24
To                   : 68 69
True                 : 65
Type                 : 5 6
While                : 67
Write                : 71
error                : 

Nonterminals, with rules where they appear

ASIGNACION           : 15
BINSTRUCCIONES       : 51
BOOLEAN              : 32
CONDICIONAL          : 17
DECLARE              : 1 3
ENTRADA              : 20
EXP                  : 22 23 24 25 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 50 51 52 53 53 67 68 68 69 69 71
EXPBINARIT           : 27 64
EXPBINBOOL           : 26
EXPTAPE              : 30
EXPUNAARIT           : 29
EXPUNABOOL           : 28
IDENT                : 5 6 7 68 70
INSTAPE              : 16 31
INSTRUCCION          : 1 2 3 12 12 13 23 23 24 67 68 69
ITERACIONDET         : 19
ITERACIONINDET       : 18
LISTADECLARA         : 4 5
OPBINSTRUCCIONES     : 54 55 56 57 58 59 60
PROGRAM              : 0
SALIDA               : 21
SUBPROGRAM           : 14
TERMINO              : 33
TIPO                 : 5 6

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . DECLARE Execute INSTRUCCION
    (2) PROGRAM -> . Execute INSTRUCCION
    (4) DECLARE -> . Declare LISTADECLARA

    Execute         shift and go to state 1
    Declare         shift and go to state 2

    PROGRAM                        shift and go to state 3
    DECLARE                        shift and go to state 4

state 1

    (2) PROGRAM -> Execute . INSTRUCCION
    (12) INSTRUCCION -> . INSTRUCCION PuntoYComa INSTRUCCION
    (13) INSTRUCCION -> . INSTRUCCION Done
    (14) INSTRUCCION -> . SUBPROGRAM
    (15) INSTRUCCION -> . ASIGNACION
    (16) INSTRUCCION -> . INSTAPE
    (17) INSTRUCCION -> . CONDICIONAL
    (18) INSTRUCCION -> . ITERACIONINDET
    (19) INSTRUCCION -> . ITERACIONDET
    (20) INSTRUCCION -> . ENTRADA
    (21) INSTRUCCION -> . SALIDA
    (3) SUBPROGRAM -> . DECLARE Execute INSTRUCCION
    (22) ASIGNACION -> . Ident Asignacion EXP
    (51) INSTAPE -> . BINSTRUCCIONES At EXP
    (52) INSTAPE -> . Inspeccion EXP
    (53) INSTAPE -> . EXP Concat EXP
    (23) CONDICIONAL -> . If EXP Then INSTRUCCION Else INSTRUCCION
    (24) CONDICIONAL -> . If EXP Then INSTRUCCION
    (67) ITERACIONINDET -> . While EXP Do INSTRUCCION
    (68) ITERACIONDET -> . For IDENT From EXP To EXP Do INSTRUCCION
    (69) ITERACIONDET -> . For EXP To EXP Do INSTRUCCION
    (70) ENTRADA -> . Read IDENT
    (71) SALIDA -> . Write EXP
    (4) DECLARE -> . Declare LISTADECLARA
    (54) BINSTRUCCIONES -> . LlaveAbre OPBINSTRUCCIONES LlaveCierra
    (25) EXP -> . ParAbre EXP ParCierra
    (26) EXP -> . EXPBINBOOL
    (27) EXP -> . EXPBINARIT
    (28) EXP -> . EXPUNABOOL
    (29) EXP -> . EXPUNAARIT
    (30) EXP -> . EXPTAPE
    (31) EXP -> . INSTAPE
    (32) EXP -> . BOOLEAN
    (33) EXP -> . TERMINO
    (36) EXPBINBOOL -> . EXP Conjuncion EXP
    (37) EXPBINBOOL -> . EXP Disyuncion EXP
    (38) EXPBINBOOL -> . EXP Mayor EXP
    (39) EXPBINBOOL -> . EXP MayorIgual EXP
    (40) EXPBINBOOL -> . EXP Menor EXP
    (41) EXPBINBOOL -> . EXP MenorIgual EXP
    (42) EXPBINBOOL -> . EXP Igual EXP
    (43) EXPBINBOOL -> . EXP Desigual EXP
    (44) EXPBINARIT -> . EXP Mas EXP
    (45) EXPBINARIT -> . EXP Menos EXP
    (46) EXPBINARIT -> . EXP Mult EXP
    (47) EXPBINARIT -> . EXP Div EXP
    (48) EXPBINARIT -> . EXP Mod EXP
    (49) EXPUNABOOL -> . Negacion EXP
    (50) EXPUNAARIT -> . Menos EXP
    (62) EXPTAPE -> . CorcheteAbre Num CorcheteCierra
    (63) EXPTAPE -> . CorcheteAbre Ident CorcheteCierra
    (64) EXPTAPE -> . CorcheteAbre EXPBINARIT CorcheteCierra
    (65) BOOLEAN -> . True
    (66) BOOLEAN -> . False
    (34) TERMINO -> . Num
    (35) TERMINO -> . Ident

    Ident           shift and go to state 21
    Inspeccion      shift and go to state 25
    If              shift and go to state 38
    While           shift and go to state 26
    For             shift and go to state 5
    Read            shift and go to state 15
    Write           shift and go to state 8
    Declare         shift and go to state 2
    LlaveAbre       shift and go to state 28
    ParAbre         shift and go to state 36
    Negacion        shift and go to state 12
    Menos           shift and go to state 17
    CorcheteAbre    shift and go to state 31
    True            shift and go to state 20
    False           shift and go to state 32
    Num             shift and go to state 13

    INSTRUCCION                    shift and go to state 6
    EXPBINARIT                     shift and go to state 7
    ITERACIONINDET                 shift and go to state 9
    EXP                            shift and go to state 10
    EXPUNABOOL                     shift and go to state 11
    ASIGNACION                     shift and go to state 14
    EXPTAPE                        shift and go to state 16
    TERMINO                        shift and go to state 18
    ITERACIONDET                   shift and go to state 19
    SALIDA                         shift and go to state 22
    INSTAPE                        shift and go to state 23
    SUBPROGRAM                     shift and go to state 24
    EXPUNAARIT                     shift and go to state 33
    EXPBINBOOL                     shift and go to state 27
    DECLARE                        shift and go to state 29
    ENTRADA                        shift and go to state 30
    CONDICIONAL                    shift and go to state 34
    BOOLEAN                        shift and go to state 35
    BINSTRUCCIONES                 shift and go to state 37

state 2

    (4) DECLARE -> Declare . LISTADECLARA
    (5) LISTADECLARA -> . LISTADECLARA PuntoYComa IDENT Type TIPO
    (6) LISTADECLARA -> . IDENT Type TIPO
    (7) IDENT -> . IDENT Coma Ident
    (8) IDENT -> . Ident

    Ident           shift and go to state 41

    IDENT                          shift and go to state 39
    LISTADECLARA                   shift and go to state 40

state 3

    (0) S' -> PROGRAM .



state 4

    (1) PROGRAM -> DECLARE . Execute INSTRUCCION

    Execute         shift and go to state 42


state 5

    (68) ITERACIONDET -> For . IDENT From EXP To EXP Do INSTRUCCION
    (69) ITERACIONDET -> For . EXP To EXP Do INSTRUCCION
    (7) IDENT -> . IDENT Coma Ident
    (8) IDENT -> . Ident
    (25) EXP -> . ParAbre EXP ParCierra
    (26) EXP -> . EXPBINBOOL
    (27) EXP -> . EXPBINARIT
    (28) EXP -> . EXPUNABOOL
    (29) EXP -> . EXPUNAARIT
    (30) EXP -> . EXPTAPE
    (31) EXP -> . INSTAPE
    (32) EXP -> . BOOLEAN
    (33) EXP -> . TERMINO
    (36) EXPBINBOOL -> . EXP Conjuncion EXP
    (37) EXPBINBOOL -> . EXP Disyuncion EXP
    (38) EXPBINBOOL -> . EXP Mayor EXP
    (39) EXPBINBOOL -> . EXP MayorIgual EXP
    (40) EXPBINBOOL -> . EXP Menor EXP
    (41) EXPBINBOOL -> . EXP MenorIgual EXP
    (42) EXPBINBOOL -> . EXP Igual EXP
    (43) EXPBINBOOL -> . EXP Desigual EXP
    (44) EXPBINARIT -> . EXP Mas EXP
    (45) EXPBINARIT -> . EXP Menos EXP
    (46) EXPBINARIT -> . EXP Mult EXP
    (47) EXPBINARIT -> . EXP Div EXP
    (48) EXPBINARIT -> . EXP Mod EXP
    (49) EXPUNABOOL -> . Negacion EXP
    (50) EXPUNAARIT -> . Menos EXP
    (62) EXPTAPE -> . CorcheteAbre Num CorcheteCierra
    (63) EXPTAPE -> . CorcheteAbre Ident CorcheteCierra
    (64) EXPTAPE -> . CorcheteAbre EXPBINARIT CorcheteCierra
    (51) INSTAPE -> . BINSTRUCCIONES At EXP
    (52) INSTAPE -> . Inspeccion EXP
    (53) INSTAPE -> . EXP Concat EXP
    (65) BOOLEAN -> . True
    (66) BOOLEAN -> . False
    (34) TERMINO -> . Num
    (35) TERMINO -> . Ident
    (54) BINSTRUCCIONES -> . LlaveAbre OPBINSTRUCCIONES LlaveCierra

    Ident           shift and go to state 43
    ParAbre         shift and go to state 36
    Negacion        shift and go to state 12
    Menos           shift and go to state 17
    CorcheteAbre    shift and go to state 31
    Inspeccion      shift and go to state 25
    True            shift and go to state 20
    False           shift and go to state 32
    Num             shift and go to state 13
    LlaveAbre       shift and go to state 28

    IDENT                          shift and go to state 45
    EXP                            shift and go to state 44
    INSTAPE                        shift and go to state 46
    EXPBINARIT                     shift and go to state 7
    EXPUNAARIT                     shift and go to state 33
    EXPTAPE                        shift and go to state 16
    BOOLEAN                        shift and go to state 35
    TERMINO                        shift and go to state 18
    EXPBINBOOL                     shift and go to state 27
    EXPUNABOOL                     shift and go to state 11
    BINSTRUCCIONES                 shift and go to state 37

state 6

    (2) PROGRAM -> Execute INSTRUCCION .
    (12) INSTRUCCION -> INSTRUCCION . PuntoYComa INSTRUCCION
    (13) INSTRUCCION -> INSTRUCCION . Done

    $end            reduce using rule 2 (PROGRAM -> Execute INSTRUCCION .)
    PuntoYComa      shift and go to state 48
    Done            shift and go to state 47


state 7

    (27) EXP -> EXPBINARIT .

    Concat          reduce using rule 27 (EXP -> EXPBINARIT .)
    Conjuncion      reduce using rule 27 (EXP -> EXPBINARIT .)
    Disyuncion      reduce using rule 27 (EXP -> EXPBINARIT .)
    Mayor           reduce using rule 27 (EXP -> EXPBINARIT .)
    MayorIgual      reduce using rule 27 (EXP -> EXPBINARIT .)
    Menor           reduce using rule 27 (EXP -> EXPBINARIT .)
    MenorIgual      reduce using rule 27 (EXP -> EXPBINARIT .)
    Igual           reduce using rule 27 (EXP -> EXPBINARIT .)
    Desigual        reduce using rule 27 (EXP -> EXPBINARIT .)
    Mas             reduce using rule 27 (EXP -> EXPBINARIT .)
    Menos           reduce using rule 27 (EXP -> EXPBINARIT .)
    Mult            reduce using rule 27 (EXP -> EXPBINARIT .)
    Div             reduce using rule 27 (EXP -> EXPBINARIT .)
    Mod             reduce using rule 27 (EXP -> EXPBINARIT .)
    To              reduce using rule 27 (EXP -> EXPBINARIT .)
    PuntoYComa      reduce using rule 27 (EXP -> EXPBINARIT .)
    Done            reduce using rule 27 (EXP -> EXPBINARIT .)
    $end            reduce using rule 27 (EXP -> EXPBINARIT .)
    Else            reduce using rule 27 (EXP -> EXPBINARIT .)
    Do              reduce using rule 27 (EXP -> EXPBINARIT .)
    ParCierra       reduce using rule 27 (EXP -> EXPBINARIT .)
    Then            reduce using rule 27 (EXP -> EXPBINARIT .)
    CorcheteCierra  reduce using rule 27 (EXP -> EXPBINARIT .)


state 8

    (71) SALIDA -> Write . EXP
    (25) EXP -> . ParAbre EXP ParCierra
    (26) EXP -> . EXPBINBOOL
    (27) EXP -> . EXPBINARIT
    (28) EXP -> . EXPUNABOOL
    (29) EXP -> . EXPUNAARIT
    (30) EXP -> . EXPTAPE
    (31) EXP -> . INSTAPE
    (32) EXP -> . BOOLEAN
    (33) EXP -> . TERMINO
    (36) EXPBINBOOL -> . EXP Conjuncion EXP
    (37) EXPBINBOOL -> . EXP Disyuncion EXP
    (38) EXPBINBOOL -> . EXP Mayor EXP
    (39) EXPBINBOOL -> . EXP MayorIgual EXP
    (40) EXPBINBOOL -> . EXP Menor EXP
    (41) EXPBINBOOL -> . EXP MenorIgual EXP
    (42) EXPBINBOOL -> . EXP Igual EXP
    (43) EXPBINBOOL -> . EXP Desigual EXP
    (44) EXPBINARIT -> . EXP Mas EXP
    (45) EXPBINARIT -> . EXP Menos EXP
    (46) EXPBINARIT -> . EXP Mult EXP
    (47) EXPBINARIT -> . EXP Div EXP
    (48) EXPBINARIT -> . EXP Mod EXP
    (49) EXPUNABOOL -> . Negacion EXP
    (50) EXPUNAARIT -> . Menos EXP
    (62) EXPTAPE -> . CorcheteAbre Num CorcheteCierra
    (63) EXPTAPE -> . CorcheteAbre Ident CorcheteCierra
    (64) EXPTAPE -> . CorcheteAbre EXPBINARIT CorcheteCierra
    (51) INSTAPE -> . BINSTRUCCIONES At EXP
    (52) INSTAPE -> . Inspeccion EXP
    (53) INSTAPE -> . EXP Concat EXP
    (65) BOOLEAN -> . True
    (66) BOOLEAN -> . False
    (34) TERMINO -> . Num
    (35) TERMINO -> . Ident
    (54) BINSTRUCCIONES -> . LlaveAbre OPBINSTRUCCIONES LlaveCierra

    ParAbre         shift and go to state 36
    Negacion        shift and go to state 12
    Menos           shift and go to state 17
    CorcheteAbre    shift and go to state 31
    Inspeccion      shift and go to state 25
    True            shift and go to state 20
    False           shift and go to state 32
    Num             shift and go to state 13
    Ident           shift and go to state 50
    LlaveAbre       shift and go to state 28

    EXP                            shift and go to state 49
    INSTAPE                        shift and go to state 46
    EXPBINARIT                     shift and go to state 7
    EXPUNAARIT                     shift and go to state 33
    EXPTAPE                        shift and go to state 16
    BOOLEAN                        shift and go to state 35
    TERMINO                        shift and go to state 18
    EXPBINBOOL                     shift and go to state 27
    EXPUNABOOL                     shift and go to state 11
    BINSTRUCCIONES                 shift and go to state 37

state 9

    (18) INSTRUCCION -> ITERACIONINDET .

    PuntoYComa      reduce using rule 18 (INSTRUCCION -> ITERACIONINDET .)
    Done            reduce using rule 18 (INSTRUCCION -> ITERACIONINDET .)
    $end            reduce using rule 18 (INSTRUCCION -> ITERACIONINDET .)
    Else            reduce using rule 18 (INSTRUCCION -> ITERACIONINDET .)


state 10

    (53) INSTAPE -> EXP . Concat EXP
    (36) EXPBINBOOL -> EXP . Conjuncion EXP
    (37) EXPBINBOOL -> EXP . Disyuncion EXP
    (38) EXPBINBOOL -> EXP . Mayor EXP
    (39) EXPBINBOOL -> EXP . MayorIgual EXP
    (40) EXPBINBOOL -> EXP . Menor EXP
    (41) EXPBINBOOL -> EXP . MenorIgual EXP
    (42) EXPBINBOOL -> EXP . Igual EXP
    (43) EXPBINBOOL -> EXP . Desigual EXP
    (44) EXPBINARIT -> EXP . Mas EXP
    (45) EXPBINARIT -> EXP . Menos EXP
    (46) EXPBINARIT -> EXP . Mult EXP
    (47) EXPBINARIT -> EXP . Div EXP
    (48) EXPBINARIT -> EXP . Mod EXP

    Concat          shift and go to state 63
    Conjuncion      shift and go to state 61
    Disyuncion      shift and go to state 51
    Mayor           shift and go to state 62
    MayorIgual      shift and go to state 59
    Menor           shift and go to state 56
    MenorIgual      shift and go to state 60
    Igual           shift and go to state 55
    Desigual        shift and go to state 54
    Mas             shift and go to state 52
    Menos           shift and go to state 57
    Mult            shift and go to state 58
    Div             shift and go to state 53
    Mod             shift and go to state 64


state 11

    (28) EXP -> EXPUNABOOL .

    Concat          reduce using rule 28 (EXP -> EXPUNABOOL .)
    Conjuncion      reduce using rule 28 (EXP -> EXPUNABOOL .)
    Disyuncion      reduce using rule 28 (EXP -> EXPUNABOOL .)
    Mayor           reduce using rule 28 (EXP -> EXPUNABOOL .)
    MayorIgual      reduce using rule 28 (EXP -> EXPUNABOOL .)
    Menor           reduce using rule 28 (EXP -> EXPUNABOOL .)
    MenorIgual      reduce using rule 28 (EXP -> EXPUNABOOL .)
    Igual           reduce using rule 28 (EXP -> EXPUNABOOL .)
    Desigual        reduce using rule 28 (EXP -> EXPUNABOOL .)
    Mas             reduce using rule 28 (EXP -> EXPUNABOOL .)
    Menos           reduce using rule 28 (EXP -> EXPUNABOOL .)
    Mult            reduce using rule 28 (EXP -> EXPUNABOOL .)
    Div             reduce using rule 28 (EXP -> EXPUNABOOL .)
    Mod             reduce using rule 28 (EXP -> EXPUNABOOL .)
    To              reduce using rule 28 (EXP -> EXPUNABOOL .)
    PuntoYComa      reduce using rule 28 (EXP -> EXPUNABOOL .)
    Done            reduce using rule 28 (EXP -> EXPUNABOOL .)
    $end            reduce using rule 28 (EXP -> EXPUNABOOL .)
    Else            reduce using rule 28 (EXP -> EXPUNABOOL .)
    Do              reduce using rule 28 (EXP -> EXPUNABOOL .)
    ParCierra       reduce using rule 28 (EXP -> EXPUNABOOL .)
    Then            reduce using rule 28 (EXP -> EXPUNABOOL .)
    CorcheteCierra  reduce using rule 28 (EXP -> EXPUNABOOL .)


state 12

    (49) EXPUNABOOL -> Negacion . EXP
    (25) EXP -> . ParAbre EXP ParCierra
    (26) EXP -> . EXPBINBOOL
    (27) EXP -> . EXPBINARIT
    (28) EXP -> . EXPUNABOOL
    (29) EXP -> . EXPUNAARIT
    (30) EXP -> . EXPTAPE
    (31) EXP -> . INSTAPE
    (32) EXP -> . BOOLEAN
    (33) EXP -> . TERMINO
    (36) EXPBINBOOL -> . EXP Conjuncion EXP
    (37) EXPBINBOOL -> . EXP Disyuncion EXP
    (38) EXPBINBOOL -> . EXP Mayor EXP
    (39) EXPBINBOOL -> . EXP MayorIgual EXP
    (40) EXPBINBOOL -> . EXP Menor EXP
    (41) EXPBINBOOL -> . EXP MenorIgual EXP
    (42) EXPBINBOOL -> . EXP Igual EXP
    (43) EXPBINBOOL -> . EXP Desigual EXP
    (44) EXPBINARIT -> . EXP Mas EXP
    (45) EXPBINARIT -> . EXP Menos EXP
    (46) EXPBINARIT -> . EXP Mult EXP
    (47) EXPBINARIT -> . EXP Div EXP
    (48) EXPBINARIT -> . EXP Mod EXP
    (49) EXPUNABOOL -> . Negacion EXP
    (50) EXPUNAARIT -> . Menos EXP
    (62) EXPTAPE -> . CorcheteAbre Num CorcheteCierra
    (63) EXPTAPE -> . CorcheteAbre Ident CorcheteCierra
    (64) EXPTAPE -> . CorcheteAbre EXPBINARIT CorcheteCierra
    (51) INSTAPE -> . BINSTRUCCIONES At EXP
    (52) INSTAPE -> . Inspeccion EXP
    (53) INSTAPE -> . EXP Concat EXP
    (65) BOOLEAN -> . True
    (66) BOOLEAN -> . False
    (34) TERMINO -> . Num
    (35) TERMINO -> . Ident
    (54) BINSTRUCCIONES -> . LlaveAbre OPBINSTRUCCIONES LlaveCierra

    ParAbre         shift and go to state 36
    Negacion        shift and go to state 12
    Menos           shift and go to state 17
    CorcheteAbre    shift and go to state 31
    Inspeccion      shift and go to state 25
    True            shift and go to state 20
    False           shift and go to state 32
    Num             shift and go to state 13
    Ident           shift and go to state 50
    LlaveAbre       shift and go to state 28

    EXP                            shift and go to state 65
    INSTAPE                        shift and go to state 46
    EXPBINARIT                     shift and go to state 7
    EXPUNAARIT                     shift and go to state 33
    EXPTAPE                        shift and go to state 16
    BOOLEAN                        shift and go to state 35
    TERMINO                        shift and go to state 18
    EXPBINBOOL                     shift and go to state 27
    EXPUNABOOL                     shift and go to state 11
    BINSTRUCCIONES                 shift and go to state 37

state 13

    (34) TERMINO -> Num .

    Conjuncion      reduce using rule 34 (TERMINO -> Num .)
    Disyuncion      reduce using rule 34 (TERMINO -> Num .)
    Mayor           reduce using rule 34 (TERMINO -> Num .)
    MayorIgual      reduce using rule 34 (TERMINO -> Num .)
    Menor           reduce using rule 34 (TERMINO -> Num .)
    MenorIgual      reduce using rule 34 (TERMINO -> Num .)
    Igual           reduce using rule 34 (TERMINO -> Num .)
    Desigual        reduce using rule 34 (TERMINO -> Num .)
    Mas             reduce using rule 34 (TERMINO -> Num .)
    Menos           reduce using rule 34 (TERMINO -> Num .)
    Mult            reduce using rule 34 (TERMINO -> Num .)
    Div             reduce using rule 34 (TERMINO -> Num .)
    Mod             reduce using rule 34 (TERMINO -> Num .)
    Concat          reduce using rule 34 (TERMINO -> Num .)
    To              reduce using rule 34 (TERMINO -> Num .)
    PuntoYComa      reduce using rule 34 (TERMINO -> Num .)
    Done            reduce using rule 34 (TERMINO -> Num .)
    $end            reduce using rule 34 (TERMINO -> Num .)
    Else            reduce using rule 34 (TERMINO -> Num .)
    Do              reduce using rule 34 (TERMINO -> Num .)
    ParCierra       reduce using rule 34 (TERMINO -> Num .)
    Then            reduce using rule 34 (TERMINO -> Num .)
    CorcheteCierra  reduce using rule 34 (TERMINO -> Num .)


state 14

    (15) INSTRUCCION -> ASIGNACION .

    PuntoYComa      reduce using rule 15 (INSTRUCCION -> ASIGNACION .)
    Done            reduce using rule 15 (INSTRUCCION -> ASIGNACION .)
    $end            reduce using rule 15 (INSTRUCCION -> ASIGNACION .)
    Else            reduce using rule 15 (INSTRUCCION -> ASIGNACION .)


state 15

    (70) ENTRADA -> Read . IDENT
    (7) IDENT -> . IDENT Coma Ident
    (8) IDENT -> . Ident

    Ident           shift and go to state 41

    IDENT                          shift and go to state 66

state 16

    (30) EXP -> EXPTAPE .

    Concat          reduce using rule 30 (EXP -> EXPTAPE .)
    Conjuncion      reduce using rule 30 (EXP -> EXPTAPE .)
    Disyuncion      reduce using rule 30 (EXP -> EXPTAPE .)
    Mayor           reduce using rule 30 (EXP -> EXPTAPE .)
    MayorIgual      reduce using rule 30 (EXP -> EXPTAPE .)
    Menor           reduce using rule 30 (EXP -> EXPTAPE .)
    MenorIgual      reduce using rule 30 (EXP -> EXPTAPE .)
    Igual           reduce using rule 30 (EXP -> EXPTAPE .)
    Desigual        reduce using rule 30 (EXP -> EXPTAPE .)
    Mas             reduce using rule 30 (EXP -> EXPTAPE .)
    Menos           reduce using rule 30 (EXP -> EXPTAPE .)
    Mult            reduce using rule 30 (EXP -> EXPTAPE .)
    Div             reduce using rule 30 (EXP -> EXPTAPE .)
    Mod             reduce using rule 30 (EXP -> EXPTAPE .)
    To              reduce using rule 30 (EXP -> EXPTAPE .)
    PuntoYComa      reduce using rule 30 (EXP -> EXPTAPE .)
    Done            reduce using rule 30 (EXP -> EXPTAPE .)
    $end            reduce using rule 30 (EXP -> EXPTAPE .)
    Else            reduce using rule 30 (EXP -> EXPTAPE .)
    Do              reduce using rule 30 (EXP -> EXPTAPE .)
    ParCierra       reduce using rule 30 (EXP -> EXPTAPE .)
    Then            reduce using rule 30 (EXP -> EXPTAPE .)
    CorcheteCierra  reduce using rule 30 (EXP -> EXPTAPE .)


state 17

    (50) EXPUNAARIT -> Menos . EXP
    (25) EXP -> . ParAbre EXP ParCierra
    (26) EXP -> . EXPBINBOOL
    (27) EXP -> . EXPBINARIT
    (28) EXP -> . EXPUNABOOL
    (29) EXP -> . EXPUNAARIT
    (30) EXP -> . EXPTAPE
    (31) EXP -> . INSTAPE
    (32) EXP -> . BOOLEAN
    (33) EXP -> . TERMINO
    (36) EXPBINBOOL -> . EXP Conjuncion EXP
    (37) EXPBINBOOL -> . EXP Disyuncion EXP
    (38) EXPBINBOOL -> . EXP Mayor EXP
    (39) EXPBINBOOL -> . EXP MayorIgual EXP
    (40) EXPBINBOOL -> . EXP Menor EXP
    (41) EXPBINBOOL -> . EXP MenorIgual EXP
    (42) EXPBINBOOL -> . EXP Igual EXP
    (43) EXPBINBOOL -> . EXP Desigual EXP
    (44) EXPBINARIT -> . EXP Mas EXP
    (45) EXPBINARIT -> . EXP Menos EXP
    (46) EXPBINARIT -> . EXP Mult EXP
    (47) EXPBINARIT -> . EXP Div EXP
    (48) EXPBINARIT -> . EXP Mod EXP
    (49) EXPUNABOOL -> . Negacion EXP
    (50) EXPUNAARIT -> . Menos EXP
    (62) EXPTAPE -> . CorcheteAbre Num CorcheteCierra
    (63) EXPTAPE -> . CorcheteAbre Ident CorcheteCierra
    (64) EXPTAPE -> . CorcheteAbre EXPBINARIT CorcheteCierra
    (51) INSTAPE -> . BINSTRUCCIONES At EXP
    (52) INSTAPE -> . Inspeccion EXP
    (53) INSTAPE -> . EXP Concat EXP
    (65) BOOLEAN -> . True
    (66) BOOLEAN -> . False
    (34) TERMINO -> . Num
    (35) TERMINO -> . Ident
    (54) BINSTRUCCIONES -> . LlaveAbre OPBINSTRUCCIONES LlaveCierra

    ParAbre         shift and go to state 36
    Negacion        shift and go to state 12
    Menos           shift and go to state 17
    CorcheteAbre    shift and go to state 31
    Inspeccion      shift and go to state 25
    True            shift and go to state 20
    False           shift and go to state 32
    Num             shift and go to state 13
    Ident           shift and go to state 50
    LlaveAbre       shift and go to state 28

    EXP                            shift and go to state 67
    INSTAPE                        shift and go to state 46
    EXPBINARIT                     shift and go to state 7
    EXPUNAARIT                     shift and go to state 33
    EXPTAPE                        shift and go to state 16
    BOOLEAN                        shift and go to state 35
    TERMINO                        shift and go to state 18
    EXPBINBOOL                     shift and go to state 27
    EXPUNABOOL                     shift and go to state 11
    BINSTRUCCIONES                 shift and go to state 37

state 18

    (33) EXP -> TERMINO .
